# cookiecutter-pypackage

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json
.github/workflows/: template_baking.yaml  test_generation.yaml
{{cookiecutter.package_name}}/: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflow/: lint_pr.yaml
{{cookiecutter.package_name}}/.github/workflows/: pr_test.yaml  version_bump.yaml
{{cookiecutter.package_name}}/docs/: mkdocs.yml
{{cookiecutter.package_name}}/docs/pages/: api.md  dev.md  index.md  quickstart.md
{{cookiecutter.package_name}}/test/unit/: __init__.py  test_utils.py
{{cookiecutter.package_name}}/{{cookiecutter.package_slug}}/: utils.py
