[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.5"
pyflakes = "^2.4.0"
isort = "^5.9.3"
mypy = "^0.910"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
detect-secrets = "^1.2.0"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
exclude = "tests/*"

# [[tool.mypy.overrides]]
# module = [
#     "somelibrary",
#     "some_other_library"
# ]
# ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
