[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.3.0"
pyflakes = "^2.4.0"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
detect-secrets = "^1.2.0"

[tool.poetry.group.semrel.dependencies]
# This is required for automatic release
# and conventional commits
commitizen = "^2.27.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.4.0"
mkdocstrings = "^0.19.1"
mkdocstrings-python = "^0.8.2"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
exclude = '''(?x)(
    ^test/.+\.py$    # ignore tests
)'''

# [[tool.mypy.overrides]]
# module = [
#     "somelibrary",
#     "some_other_library"
# ]
# ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "{{ cookiecutter.package_version }}"
version_files = [
    "pyproject.toml:tool.poetry"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-vv",
    "--import-mode=importlib",  # https://docs.pytest.org/en/7.2.x/explanation/goodpractices.html#test-discovery
    "--cov=src",
    "--cov=test",
    "--cov-report=",
    "--cov-branch",
]
testpaths = [
    "test/unit/",
]
